tests/integration/snapshots/integration__commands__format__uglify_STRING_UNICODE_ESCAPE_PRINTABLE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
"\u0041"
stdout ---
"\u0041"

stderr ---
