tests/integration/snapshots/integration__commands__format__uglify_STRING_UNICODE_SPACE_ESCAPE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
"\u0020"
stdout ---
"\u0020"

stderr ---
