tests/integration/snapshots/integration__commands__format__uglify_VALID_FRACTION.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
98.8
stdout ---
98.8

stderr ---
