tests/integration/snapshots/integration__commands__format__uglify_VALID_NEGATIVE_INTEGER.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
-298
stdout ---
-298

stderr ---
