tests/integration/snapshots/integration__commands__format__uglify_VALID_TRAILING_ZEROS_FRACTION.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
1.0000
stdout ---
1.0000

stderr ---
