tests/integration/snapshots/integration__commands__format__uglify_ZERO.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
0
stdout ---
0

stderr ---
